<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/app_name">
        <Preference
            android:key="pref_key_core_version"
            android:persistent="true"
            android:title="@string/settings_game_core_version"/>
        <Preference
            android:key="pref_key_game_res_path"
            android:persistent="true"
            android:title="@string/settings_game_res_path"/>
        <CheckBoxPreference
            android:key="pref_key_game_sound_effect"
            android:persistent="true"
            android:title="@string/settings_game_enable_sound_effect"/>
        <CheckBoxPreference
            android:key="pref_key_game_screen_orientation"
            android:persistent="true"
            android:title="@string/settings_game_screen_orientation"/>
        <CheckBoxPreference
            android:key="pref_key_game_font_antialias"
            android:persistent="true"
            android:summary="@string/settings_game_font_antialias_summary"
            android:title="@string/settings_game_font_antialias"/>
        <CheckBoxPreference
            android:key="pref_key_immersive_mode"
            android:persistent="true"
            android:summary="@string/settings_game_immersive_mode_summary"
            android:title="@string/settings_game_immersive_mode"/>
        <CheckBoxPreference
            android:key="pref_key_game_lab_pendulum_scale"
            android:summary="@string/settings_game_lab_pendulum_scale_des"
            android:title="@string/settings_game_lab_pendulum_scale"/>
        <ListPreference
            android:entries="@array/opengl_version"
            android:entryValues="@array/opengl_version_value"
            android:key="pref_key_game_ogles_config"
            android:persistent="true"
            android:title="@string/settings_game_opengl"/>
        <ListPreference
            android:entries="@array/card_quality"
            android:entryValues="@array/card_quality_value"
            android:key="pref_key_game_image_quality"
            android:persistent="true"
            android:title="@string/settings_game_card_quality"/>

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_category_diy">
        <Preference
            android:key="pref_key_game_font_name"
            android:persistent="true"
            android:title="@string/settings_game_font_name"/>

        <Preference
            android:key="settings_game_diy_card_cover"
            android:persistent="true"
            android:title="@string/settings_game_diy_card_back"/>

        <Preference
            android:key="settings_game_diy_card_bg"
            android:persistent="true"
            android:title="@string/settings_game_diy_cover"/>
        <CheckBoxPreference
            android:key="settings_game_diy_card_db"
            android:persistent="true"
            android:summary="@string/settings_game_diy_card_db_des"
            android:title="@string/settings_game_diy_card_db"/>
    </PreferenceCategory>

</PreferenceScreen>