<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_game"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/action_game"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_card_search"
        android:title="@string/card_search"
        />
    <item
        android:id="@+id/action_deck_manager"
        android:title="@string/deck_manager"
        />
    <item
        android:id="@+id/action_add_server"
        android:title="@string/action_add_server"/>
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_help"
        android:title="@string/help"/>
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"/>

    <item
        android:id="@+id/action_quit"
        android:title="@string/quit"/>
</menu>