<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white"
        android:title="@string/search"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_card_list"
        android:icon="@drawable/ic_collections"
        android:title="@string/card_result"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_mode_save"
        android:title="@string/save_deck"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_manager"
        android:icon="@drawable/ic_mode_edit"
        android:title="@string/deck_manager"/>

    <item
        android:id="@+id/action_unsort"
        android:icon="@drawable/ic_refresh"
        android:title="@string/unsort"/>
</menu>