<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="@dimen/button_width_small"
        android:layout_height="@dimen/button_width_small"
        android:layout_gravity="right"
        android:paddingRight="8dp"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/ic_close_black_24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/label_width_middle"
                android:layout_height="wrap_content"
                android:text="@string/server_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorAccent"/>

            <EditText
                android:id="@+id/server_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/must_info"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="@dimen/label_width_middle"
                    android:layout_height="wrap_content"
                    android:text="@string/server_ip"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorAccent"/>

                <EditText
                    android:id="@+id/text_ip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="1234567890."
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:hint="@string/must_info"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="@dimen/label_width_50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/server_port"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorAccent"/>

                <EditText
                    android:id="@+id/text_port"
                    android:layout_width="@dimen/label_width_50dp"
                    android:layout_height="wrap_content"
                    android:digits="1234567890"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:text="0"
                    android:hint="@string/must_info"/>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/label_width_middle"
                android:layout_height="wrap_content"
                android:text="@string/server_user"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            <EditText
                android:id="@+id/text_player"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:hint="@string/must_info"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/label_width_middle"
                android:layout_height="wrap_content"
                android:text="@string/server_user_pwd"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            <EditText
                android:id="@+id/text_player_pwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="123456"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button2_bg"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/save"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</FrameLayout>