<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="@dimen/nav_head_height"
              android:background="@color/colorPrimaryDark"
              android:paddingTop="24dp"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/nav_icon_width"
            android:layout_height="@dimen/nav_icon_height"
            android:layout_marginLeft="4dp"
            android:src="@drawable/ic_icon"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_about_author_pref"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/settings_author"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/white"/>
            <Button
                android:id="@+id/nav_donation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:background="@drawable/button_bg"
                android:layout_margin="4dp"
                android:textColor="@color/white"
                android:layout_gravity="right"
                android:text="@string/donation"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>