<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/label_width"
            android:layout_height="wrap_content"
            android:text="@string/server_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <EditText
            android:id="@+id/server_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="player"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <TextView
                android:id="@+id/textView"
                android:layout_width="@dimen/label_width"
                android:layout_height="wrap_content"
                android:text="@string/server_ip"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            <EditText
                android:id="@+id/text_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="127.0.0.1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="@dimen/label_width_small"
                android:layout_height="wrap_content"
                android:text="@string/server_port"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            <EditText
                android:id="@+id/text_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="233"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/label_width"
            android:layout_height="wrap_content"
            android:text="@string/server_user"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <EditText
            android:id="@+id/text_player"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="player"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/label_width"
            android:layout_height="wrap_content"
            android:text="@string/server_user_pwd"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <EditText
            android:id="@+id/text_player_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="123456"/>
    </LinearLayout>
</LinearLayout>