<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/server_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="4dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/colorAccent"
        tools:text="Server Name"/>

    <LinearLayout
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/label_height"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <TextView
                android:id="@+id/textView"
                android:layout_width="@dimen/label_width"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/server_ip"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/text_ip"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="127.0.0.1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="@dimen/label_width_small"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/server_port"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/text_port"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="233"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/label_height"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/label_width"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/server_user"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/text_player"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="player"/>
    </LinearLayout>
</LinearLayout>